2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/irq/irq_init.c: Add missing prototypes.

2008-08-04	Ray Xu <rayx.cn@gmail.com>

	* shared/irq/irq_asm.S: Correct minor mistakes in adding Thumb code
	which prevented ARM from working.

2008-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/comm/console.c: Eliminate copies of switches to convert
	termios Bxxx constants to xxx as an integer. Use the shared
	termios_baud_to_number() routine to do the same conversion.

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* csb336/startup/bspstart.c, csb337/startup/bspstart.c,
	edb7312/startup/bspstart.c, gba/startup/bspstart.c,
	gp32/startup/bspstart.c, rtl22xx/startup/bspstart.c: Add capability
	for bootcard.c BSP Initialization Framework to ask the BSP where it
	has memory for the RTEMS Workspace and C Program Heap. These
	collectively are referred to as work area. If the BSP supports this,
	then it does not have to include code to split the available memory
	between the two areas. This reduces the amount of code in the BSP
	specific bspstart.c file. Additionally, the shared framework can
	initialize the C Library, call rtems_debug_enable(), and dirty the
	work area memory. Until most/all BSPs support this new capability, if
	the BSP supports this, it should call
	RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION from its configure.ac. When
	the transition is complete, this autoconf macro can be removed.

2008-05-06	Ray Xu <rayx.cn@gmail.com>

	* acinclude.m4: Add smdk2410. Update gp32 to use shared code.

2008-04-16	Matthieu Bucchianeri <mbucchia@gmail.com>

	* acinclude.m4: Adding Nintendo DS BSP.

2008-02-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/comm/console.c: Do not have BSP specific __assert.

2007-11-03      Ray Xu <rayx.cn@gmail.com>

        * shared/abort/simple_abort.c: Add veneer for ARM<->Thumb
        shared/irq/irq_asm.S: Add veneer for ARM<->Thumb

2007-11-06	Till Straumann <strauman@slac.stanford.edu>
