@@ -1,3 +1,7 @@
+2008-09-12	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* shared/bspgetworkarea.c: New file.
+
 2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* shared/irq/irq_init.c: Add missing prototypes.
